--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,1 +1,11 @@
-404 page
+{% extends "base.html" %}
+
+{% block append_title %} - HTTP 404{% endblock %}
+
+{% block content %}
+  <div class="jumbotron">
+    <h1>404 Not Found</h1>
+    <p class="lead">Page not found.</p>
+    <p>URL: {{ request.url }}</p>
+  </div>
+{% endblock %}
