--- a/app/templates/users/register.html
+++ b/app/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  {% from "forms/macros.html" import render_field %}
+  {% from "users/forms/macros.html" import render_field %}
   <form method="POST" action="." class="form">
     {{ form.csrf_token }}
     {{ render_field(form.name, class="input text") }}
